--- a/free-wifi-android/AndroidManifest.xml
+++ b/free-wifi-android/AndroidManifest.xml
@@ -3,6 +3,13 @@
     package="app.freewifi"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE">
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE">
+    </uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE">
+	</uses-permission>
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -27,6 +34,11 @@
             android:name="app.freewifi.DetailActivity">
         </activity>
         
+        <activity 
+            android:name="app.freewifi.WiFiListActivity">
+        </activity>
+        
     </application>
+   
 
 </manifest>
