--- a/free-wifi-android/AndroidManifest.xml
+++ b/free-wifi-android/AndroidManifest.xml
@@ -10,6 +10,7 @@
     </uses-permission>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE">
 	</uses-permission>
+	<uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-sdk
         android:minSdkVersion="11"
