--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "libraries/libtomcrypt"]
 	path = libraries/libtomcrypt
 	url = git@github.com:seagullua/libtomcrypt.git
+[submodule "libraries/zlib"]
+	path = libraries/zlib
+	url = git@github.com:seagullua/zlib.git
