--- a/free-wifi-android/AndroidManifest.xml
+++ b/free-wifi-android/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:name="app.freewifi.App">
         <activity
             android:name="app.freewifi.MainActivity"
             android:label="@string/app_name" >
